promnetpp/src/com/googlecode/promnetpp/parsing/PROMELAParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PROMELAParser.java */
package com.googlecode.promnetpp.parsing;

import java.io.BufferedReader;
import java.io.InputStreamReader;

public class PROMELAParser/*@bgen(jjtree)*/implements PROMELAParserTreeConstants, PROMELAParserConstants {/*@bgen(jjtree)*/
  protected JJTPROMELAParserState jjtree = new JJTPROMELAParserState();public static void main(String[] args) throws Exception {
        BufferedReader standardInputReader = new BufferedReader(
            new InputStreamReader(System.in));
        PROMELAParser parser = new PROMELAParser(standardInputReader);
        System.err.println("Waiting for your input.");
        ASTNode rootNode = parser.Start();
        rootNode.dump("");
    }

  final public ASTNode Start() throws ParseException {
                   /*@bgen(jjtree) Start */
  ASTNode jjtn000 = new ASTNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Specification();
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Specification() throws ParseException {
                        /*@bgen(jjtree) Specification */
  ASTNode jjtn000 = new ASTNode(JJTSPECIFICATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        Unit();
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Unit() throws ParseException {
               /*@bgen(jjtree) Unit */
  ASTNode jjtn000 = new ASTNode(JJTUNIT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(3)) {
        Comment();
      } else if (jj_2_3(3)) {
        DefineDirective();
      } else if (jj_2_4(3)) {
        TypeDefinition();
      } else if (jj_2_5(3)) {
        GlobalDeclaration();
      } else if (jj_2_6(3)) {
        FunctionDefinition();
      } else if (jj_2_7(3)) {
        ProcessDefinition();
      } else if (jj_2_8(3)) {
        InitProcessDefinition();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Comment() throws ParseException {
                  /*@bgen(jjtree) Comment */
                  ASTNode jjtn000 = new ASTNode(JJTCOMMENT);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token comment;
    try {
      comment = jj_consume_token(MULTI_LINE_COMMENT);
                                     jjtree.closeNodeScope(jjtn000, true);
                                     jjtc000 = false;
                                     jjtn000.value = comment.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void DefineDirective() throws ParseException {
                          /*@bgen(jjtree) DefineDirective */
                          ASTNode jjtn000 = new ASTNode(JJTDEFINEDIRECTIVE);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token directive;
    try {
      directive = jj_consume_token(DEFINE_DIRECTIVE);
                                     jjtree.closeNodeScope(jjtn000, true);
                                     jjtc000 = false;
                                     jjtn000.value = directive.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void TypeDefinition() throws ParseException {
                         /*@bgen(jjtree) TypeDefinition */
                         ASTNode jjtn000 = new ASTNode(JJTTYPEDEFINITION);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);Token identifier;
    try {
      jj_consume_token(TYPEDEF);
      identifier = jj_consume_token(IDENTIFIER);
                                          jjtn000.name = identifier.image;
      jj_consume_token(42);
      SimpleDeclaration();
      label_2:
      while (true) {
        if (jj_2_9(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(43);
        SimpleDeclaration();
      }
      if (jj_2_10(3)) {
        jj_consume_token(43);
      } else {
        ;
      }
      jj_consume_token(44);
      if (jj_2_11(3)) {
        jj_consume_token(43);
      } else {
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void SimpleDeclaration() throws ParseException {
                            /*@bgen(jjtree) SimpleDeclaration */
                            ASTNode jjtn000 = new ASTNode(JJTSIMPLEDECLARATION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);String typeName; Token identifier;
Token arrayCapacity;
    try {
      typeName = TypeName();
      identifier = jj_consume_token(IDENTIFIER);
      jjtn000.typeName = typeName; jjtn000.name = identifier.image;
      if (jj_2_14(3)) {
        jj_consume_token(45);
        if (jj_2_12(3)) {
          arrayCapacity = jj_consume_token(IDENTIFIER);
        } else if (jj_2_13(3)) {
          arrayCapacity = jj_consume_token(INTEGER_LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(46);
          jjtn000.putValue("isArray", true); jjtn000.putValue("arrayCapacity",
    arrayCapacity.image);
      } else {
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void MultiDeclaration() throws ParseException {
                           /*@bgen(jjtree) MultiDeclaration */
  ASTNode jjtn000 = new ASTNode(JJTMULTIDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      TypeName();
      jj_consume_token(IDENTIFIER);
      label_3:
      while (true) {
        jj_consume_token(47);
        jj_consume_token(IDENTIFIER);
        if (jj_2_15(3)) {
          ;
        } else {
          break label_3;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public String TypeName() throws ParseException {
                     /*@bgen(jjtree) TypeName */
                     ASTNode jjtn000 = new ASTNode(JJTTYPENAME);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token identifier;
    try {
      if (jj_2_16(3)) {
        jj_consume_token(BIT);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            {if (true) return "bit";}
      } else if (jj_2_17(3)) {
        jj_consume_token(BOOL);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               {if (true) return "bool";}
      } else if (jj_2_18(3)) {
        jj_consume_token(BYTE);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               {if (true) return "byte";}
      } else if (jj_2_19(3)) {
        jj_consume_token(CHAN);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               {if (true) return "chan";}
      } else if (jj_2_20(3)) {
        jj_consume_token(INT);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              {if (true) return "int";}
      } else if (jj_2_21(3)) {
        jj_consume_token(MTYPE);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
                {if (true) return "mtype";}
      } else if (jj_2_22(3)) {
        jj_consume_token(SHORT);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
                {if (true) return "short";}
      } else if (jj_2_23(3)) {
        identifier = jj_consume_token(IDENTIFIER);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                  {if (true) return identifier.image;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void GlobalDeclaration() throws ParseException {
                            /*@bgen(jjtree) GlobalDeclaration */
  ASTNode jjtn000 = new ASTNode(JJTGLOBALDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SimpleDeclaration();
      if (jj_2_26(3)) {
        jj_consume_token(48);
        if (jj_2_24(3)) {
          Expression();
        } else if (jj_2_25(3)) {
          ChannelInitialization();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      jj_consume_token(43);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void ChannelInitialization() throws ParseException {
                                /*@bgen(jjtree) ChannelInitialization */
  ASTNode jjtn000 = new ASTNode(JJTCHANNELINITIALIZATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(45);
      if (jj_2_27(3)) {
        jj_consume_token(IDENTIFIER);
      } else if (jj_2_28(3)) {
        jj_consume_token(INTEGER_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(46);
      jj_consume_token(OF);
      jj_consume_token(42);
      TypeName();
      label_4:
      while (true) {
        if (jj_2_29(3)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(47);
        TypeName();
      }
      jj_consume_token(44);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void FunctionDefinition() throws ParseException {
                             /*@bgen(jjtree) FunctionDefinition */
  ASTNode jjtn000 = new ASTNode(JJTFUNCTIONDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INLINE);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(49);
      if (jj_2_30(3)) {
        FunctionParameters();
      } else {
        ;
      }
      jj_consume_token(50);
      jj_consume_token(42);
      InstructionList();
      jj_consume_token(44);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void FunctionParameters() throws ParseException {
                             /*@bgen(jjtree) FunctionParameters */
  ASTNode jjtn000 = new ASTNode(JJTFUNCTIONPARAMETERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
      label_5:
      while (true) {
        if (jj_2_31(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(47);
        jj_consume_token(IDENTIFIER);
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void InstructionList() throws ParseException {
                          /*@bgen(jjtree) InstructionList */
  ASTNode jjtn000 = new ASTNode(JJTINSTRUCTIONLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_6:
      while (true) {
        Instruction();
        if (jj_2_32(3)) {
          ;
        } else {
          break label_6;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Instruction() throws ParseException {
                      /*@bgen(jjtree) Instruction */
  ASTNode jjtn000 = new ASTNode(JJTINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_36(3)) {
        NonBlockInstruction();
        if (jj_2_35(3)) {
          if (jj_2_33(3)) {
            jj_consume_token(51);
          } else if (jj_2_34(3)) {
            jj_consume_token(43);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          ;
        }
      } else if (jj_2_37(3)) {
        BlockInstruction();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void NonBlockInstruction() throws ParseException {
                              /*@bgen(jjtree) NonBlockInstruction */
  ASTNode jjtn000 = new ASTNode(JJTNONBLOCKINSTRUCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_38(2147483647)) {
        Increment();
      } else if (jj_2_39(2147483647)) {
        Decrement();
      } else if (jj_2_40(2147483647)) {
        Assignment();
      } else if (jj_2_41(2147483647)) {
        SendStatement();
      } else if (jj_2_42(2147483647)) {
        ReceiveStatement();
      } else if (jj_2_43(2147483647)) {
        MultiDeclaration();
      } else if (jj_2_44(2147483647)) {
        SimpleDeclaration();
      } else if (jj_2_45(2147483647)) {
        Expression();
      } else if (jj_2_46(3)) {
        Break();
      } else if (jj_2_47(3)) {
        DoLoop();
      } else if (jj_2_48(3)) {
        Else();
      } else if (jj_2_49(3)) {
        ForLoop();
      } else if (jj_2_50(3)) {
        If();
      } else if (jj_2_51(3)) {
        Run();
      } else if (jj_2_52(3)) {
        Skip();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void SendStatement() throws ParseException {
                        /*@bgen(jjtree) SendStatement */
  ASTNode jjtn000 = new ASTNode(JJTSENDSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Variable();
      jj_consume_token(52);
      Expression();
      label_7:
      while (true) {
        if (jj_2_53(3)) {
          ;
        } else {
          break label_7;
        }
        jj_consume_token(47);
        Expression();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void ReceiveStatement() throws ParseException {
                           /*@bgen(jjtree) ReceiveStatement */
  ASTNode jjtn000 = new ASTNode(JJTRECEIVESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Variable();
      jj_consume_token(53);
      Variable();
      label_8:
      while (true) {
        if (jj_2_54(3)) {
          ;
        } else {
          break label_8;
        }
        jj_consume_token(47);
        Variable();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Increment() throws ParseException {
                    /*@bgen(jjtree) Increment */
  ASTNode jjtn000 = new ASTNode(JJTINCREMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Variable();
      jj_consume_token(54);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void Decrement() throws ParseException {
                    /*@bgen(jjtree) Decrement */
  ASTNode jjtn000 = new ASTNode(JJTDECREMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Variable();
      jj_consume_token(55);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
